[gd_scene load_steps=15 format=3 uid="uid://b5e0j56csb224"]

[ext_resource type="Script" path="res://Scripts/Characters/ZorroCat.gd" id="1_1vnr5"]
[ext_resource type="Texture2D" uid="uid://3d7c5tcthvcl" path="res://Assets/Characters/pixil-frame-0 (7).png" id="1_4vxf3"]
[ext_resource type="Texture2D" uid="uid://cgcg4beymrvp1" path="res://Assets/Characters/pixil-frame-0 (9).png" id="2_acwl4"]
[ext_resource type="Texture2D" uid="uid://y1tvvf2vcpw3" path="res://Assets/Characters/pixil-frame-0 (11).png" id="2_bgqk3"]
[ext_resource type="Texture2D" uid="uid://4h1fy448mwla" path="res://Assets/Characters/pixil-frame-0 (10).png" id="3_0otis"]
[ext_resource type="Texture2D" uid="uid://gah86pgnn050" path="res://Assets/UI/angle.png" id="3_wwewu"]
[ext_resource type="Texture2D" uid="uid://cddoienr1bdag" path="res://Assets/UI/New Piskel (2).png" id="4_kejy1"]
[ext_resource type="Texture2D" uid="uid://keeh46y3yyn6" path="res://Assets/UI/New Piskel (1).png" id="5_64whw"]
[ext_resource type="Texture2D" uid="uid://d1sictwwc5twn" path="res://Assets/Characters/pixil-frame-0 (8).png" id="6_af23q"]
[ext_resource type="Texture2D" uid="uid://bndyq20bocfdt" path="res://Assets/Math/math4.png" id="9_rd4e1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fm3y1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bgqk3")
}],
"loop": true,
"name": &"Big Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_acwl4")
}, {
"duration": 1.0,
"texture": ExtResource("3_0otis")
}],
"loop": true,
"name": &"Calculating",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_4vxf3")
}, {
"duration": 1.0,
"texture": ExtResource("6_af23q")
}],
"loop": true,
"name": &"Iddle",
"speed": 1.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_11d5b"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_yhoym"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kc86e"]
particle_flag_disable_z = true
angle_min = -385.7
angle_max = 340.7
direction = Vector3(1, 1, 2.08165e-12)
spread = 101.25
initial_velocity_max = 116.07
directional_velocity_min = -69.71
directional_velocity_max = 7.43
directional_velocity_curve = SubResource("CurveXYZTexture_yhoym")
orbit_velocity_min = -0.286
orbit_velocity_max = 0.161
radial_velocity_min = -53.58
radial_velocity_max = 26.78
gravity = Vector3(2.08165e-12, -98, 2.08165e-12)

[node name="Player" type="Node2D"]

[node name="Trajectory" type="Line2D" parent="."]
scale = Vector2(1.5, 1.5)
points = PackedVector2Array(1, 1)
width = 3.0
default_color = Color(0.983429, 0.000386611, 0.89851, 1)
end_cap_mode = 2

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
scale = Vector2(1.5, 1.5)
collision_mask = 2
floor_stop_on_slope = false
floor_max_angle = 0.490438
safe_margin = 4.268
script = ExtResource("1_1vnr5")
max_jump_force = 55000.0
jump_force_inc = 500
angle_speed = 1.3

[node name="IddleSprite" type="AnimatedSprite2D" parent="CharacterBody2D"]
sprite_frames = SubResource("SpriteFrames_fm3y1")
animation = &"Iddle"

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
visible = false
texture = ExtResource("1_4vxf3")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CharacterBody2D"]
polygon = PackedVector2Array(-17, 13, -17, 16, -14.6667, 19.3333, -16, 21, -16, 25, -14, 28, -11, 28, -11, 26, -12, 25, -12, 21, -9, 20, -9.33333, 22.6667, -10, 23, -10, 26, -8, 28, -4, 28, -4, 26, -6, 24, -6, 22, -4, 20, -1, 20, -1, 22, 0, 25, 2, 28, 5, 28, 5, 26, 3, 25, 3, 21, 5, 20, 6, 24, 9, 28, 12, 28, 11.3333, 24.6667, 9.33333, 23.3333, 9.33333, 20, 11.3333, 17.3333, 14.6667, 12.6667, 16.6667, 11.3333, 19.3333, 8, 18, 5.33333, 16, 4, 17, 2, 15, 0, 13, -1, 11, -1, 8, 1, 8, 3, 9, 4, 5, 8, 4, 8, 2, 6, 0, 5, -9, 5, -12, 7.33333, -14, 8)

[node name="TrajectoryPoint" type="Node2D" parent="CharacterBody2D"]
position = Vector2(2, 8.66667)

[node name="Control" type="Control" parent="CharacterBody2D"]
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = -24.0
offset_right = 64.0
offset_bottom = 16.0

[node name="Angle" type="ProgressBar" parent="CharacterBody2D/Control"]
visible = false
modulate = Color(0.277753, 0.62121, 0, 1)
layout_mode = 0
offset_left = -95.0
offset_top = -106.0
offset_right = 48.0
offset_bottom = -79.0
fill_mode = 1
show_percentage = false

[node name="JumpForce" type="ProgressBar" parent="CharacterBody2D/Control"]
visible = false
modulate = Color(0.978192, 0.000896896, 0.172635, 1)
visibility_layer = 2
layout_mode = 0
offset_left = -47.0
offset_top = -163.0
offset_right = -39.0
offset_bottom = -39.0
fill_mode = 3
show_percentage = false

[node name="Coordinates" type="Sprite2D" parent="CharacterBody2D/Control"]
position = Vector2(-24, -29.3333)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_wwewu")

[node name="Pivot" type="Node2D" parent="CharacterBody2D/Control/Coordinates"]
position = Vector2(-6.93882e-12, 113.333)
rotation = -0.174533

[node name="Arrowhead" type="Sprite2D" parent="CharacterBody2D/Control/Coordinates/Pivot"]
position = Vector2(46.9218, -1.20339)
scale = Vector2(2, 2)
texture = ExtResource("4_kejy1")
offset = Vector2(-7, 2.08165e-12)

[node name="Stem" type="Sprite2D" parent="CharacterBody2D/Control/Coordinates/Pivot"]
position = Vector2(0.231472, -1.31275)
scale = Vector2(2, 2)
texture = ExtResource("5_64whw")
offset = Vector2(16, 2.08165e-12)

[node name="HeadPosition" type="Node2D" parent="CharacterBody2D/Control/Coordinates/Pivot/Stem"]
position = Vector2(23.3452, 0.0546768)

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(0, -210)
zoom = Vector2(0.8, 0.8)
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 1.0
drag_top_margin = 0.5
drag_right_margin = 1.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="CharacterBody2D"]
material = SubResource("CanvasItemMaterial_11d5b")
position = Vector2(12, 6.66667)
emitting = false
amount = 4
amount_ratio = 0.2042
process_material = SubResource("ParticleProcessMaterial_kc86e")
texture = ExtResource("9_rd4e1")
randomness = 0.44
collision_base_size = 0.0
